--- a/acabspring.css
+++ b/acabspring.css
@@ -104,6 +104,7 @@ body {
     .contact {
         flex: 1;
         border: 2px dashed green;
+        outline: dashed #ff29f5;
         font-size: 18px;
         background-color: #fff562;
         text-align: center; 
@@ -113,6 +114,8 @@ body {
         .contact:link {
          color: #550086;
          text-decoration: none;
+         font-family: sans-serif;
+         font-size: 24px;
         }
         
         .contact:hover {
@@ -200,6 +203,11 @@ body {
         .introo {
                 text-align: center;
         }
+        
+            .introo:hover {
+                text-decoration: underline;
+                background: url('images/confetti-lite2.gif');
+            }
             
     
         .one {
